--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	box-sizing: border-box;
+	list-style: none;
+	text-decoration: none;
+}
+:root {
+	--color-primary: #ff5a5f;
+	--color-primary-variant: rgba(255, 90, 95, 0.5);
+	--color-white: #fff;
+	--color-light: rgba(255, 255, 255, 0.6);
+	--color-sub-title: #222222;
+	--transition: all 400ms ease;
+	--container-width-lg: 50.9%;
+	--container-width-md: 80%;
+	--container-width-sm: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+	scroll-behavior: smooth;
+}
+
+body {
+	font-family: 'Poppins', sans-serif;
+	background-color: var(--color-white);
+}
+
+/*======================= GENERAL STYLES =======================*/
+
+.container {
+	width: var(--container-width-lg);
+	margin: 0 auto;
+}
+
+h1 {
+	font-size: 2.25rem;
+}
+
+/*======================= MEDIA QUERIES (MEDIUM DEVICES) =======================*/
+
+@media screen and (max-width: 1024px) {
+	.container {
+		width: var(--container-width-md);
+	}
+}
+
+/*======================= MEDIA QUERIES (SMALL DEVICES) =======================*/
+
+@media screen and (max-width: 600px) {
+	.container {
+		width: var(--container-width-sm);
+	}
 }
